[Feature] Added (fav)icons & meta-tags

--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Смотри на мир чужими глазами: сайт обмена видеовпечатлениями">
   <title>Посмотри в окно</title>
   <link rel="stylesheet" href="./fonts/fonts.css" />
   <link rel="stylesheet" href="./styles/style.css" />
   <link rel="stylesheet" href="./styles/preloader.css" />
   <link rel="stylesheet" href="./styles/error.css" />
+  <link rel="icon" href="./images/favicon.ico" sizes="any">
+  <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+  <meta property="og:title" content="Посмотри в окно">
+  <!-- <meta property="og:url" content="https://glance-outside.kspshnik.com"> -->
+  <meta property="og:image" content="./images/og.jpg">
+  <meta property="og:description" content="Смотри на мир чужими глазами: сайт обмена видеовпечатлениями">
+  <meta property="og:image:alt" content="Сайт обмена видеовпечателениями о городах" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="kspshnik.com">
+  <!--   <meta property="twitter:url" content="https://glance-outside.kspshnik.com"> -->
+  <meta name="twitter:title" content="Посмотри в окно">
+  <meta name="twitter:description" content="Смотри на мир чужими глазами: сайт обмена видеовпечатлениями">
+  <meta name="twitter:image" content="./images/og.jpg">
+
 </head>
 
 <body class="page">
